2011-04-10 belangeo <belangeo@gmail.com>

    * New object : MidiAdsr, a Midi triggered ADSR envelope generator.
    - rev 572

2011-04-01 belangeo <belangeo@gmail.com>

    * New objects : LFO, Band-limited Low Frequency Oscillator with different wave shapes.
    - rev 571

2011-03-27 belangeo <belangeo@gmail.com>

    * New chaotic attractor objects : Lorenz and Rossler
    - rev 567

2011-03-14 belangeo <belangeo@gmail.com>

    * Convolution-based filter family : IRWinSinc, IRPulse, IRAverage, IRFM
    - rev 565

2011-03-02 belangeo <belangeo@gmail.com>

    * Added new object : BrownNoise
    - rev 564

2011-03-02 belangeo <belangeo@gmail.com>

    * Added new object : Wrap (Wraps-around the signal that exceeds the `min` and `max` thresholds.)
    - rev 562

2011-03-01 belangeo <belangeo@gmail.com>

    * Added new object : Mirror (Reflects the signal that exceeds the `min` and `max` thresholds.)
    - rev 561

2011-03-01 belangeo <belangeo@gmail.com>

    * Added new object : Between (Output a trig if input is between `min` and `max`)
    - rev 558

2011-02-27 belangeo <belangeo@gmail.com>

    * Added new object : CrossFM
    - rev 552

2011-02-26 belangeo <belangeo@gmail.com>

    * Added new object : PinkNoise
    - rev 551

2011-02-26 belangeo <belangeo@gmail.com>

    * Added new object : Blit (Band Limited Impulse Train)
    - rev 550

2011-02-23 belangeo <belangeo@gmail.com>

    * Added new object : AllpassWG
    - rev 548

2011-02-21 belangeo <belangeo@gmail.com>

    * All trig signals can be treated as number, allowing arithmetic operations.
    - rev 547

2010-02-20 belangeo <belangeo@gmail.com>

    * rev 544 - pyo 0.03 release.

2010-12-30 belangeo <belangeo@gmail.com>

    * Added new object : Mixer
    - rev 537

2010-12-13 belangeo <belangeo@gmail.com>

    * Added graph() method to some PyoTableObjects, allowing the
      control of the envelope's shape with a grapher window.
    - rev 532


2010-11-02 belangeo <belangeo@gmail.com>
